@@ -713,6 +713,7 @@ qc pass: interop1: spantree nonroot
 qc pass: interop1: spantree root
 qc pass: interop1: point2point ethernet encapsulation
 qc pass: interop1: lacp
+qc pass: interop1: fragmentation and reassembly
 qc pass: interop1: ike1 with ipv4
 qc pass: interop1: ike1 with ipv6
 qc pass: interop1: ike1 with 3des
@@ -833,6 +834,7 @@ qc pass: interop2: dot1q encapsulation
 qc pass: interop2: dot1ad encapsulation
 qc pass: interop2: point2point ethernet encapsulation
 qc pass: interop2: lacp
+qc pass: interop2: fragmentation and reassembly
 qc pass: interop2: point2point isis
 qc pass: interop2: isis dis
 qc pass: interop2: isis nondis
@@ -895,6 +897,7 @@ qc pass: interop8: bgp extended community
 qc pass: interop8: bgp large community
 qc pass: interop8: bgp with php labels
 qc pass: interop8: eigrp
+qc pass: interop8: fragmentation and reassembly
 qc pass: interop8: point2point isis
 qc pass: interop8: isis dis
 qc pass: interop8: isis nondis
@@ -938,6 +941,7 @@ qc pass: interop9: bgp large community
 qc pass: interop9: bgp with php labels
 qc pass: interop9: ethernet encapsulation
 qc pass: interop9: dot1q encapsulation
+qc pass: interop9: fragmentation and reassembly
 qc pass: interop9: point2point isis
 qc pass: interop9: isis dis
 qc pass: interop9: isis nondis
