@@ -11,7 +11,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v21.12.5-cur, done by cs@nop.<br/>
-tested: 2021-12-05 05:30:11, took 00:07:10, with 100 workers, on 2498 cases, 0 failed, 0 traces, 0 retries<br/>
+tested: 2021-12-05 06:44:09, took 00:06:16, with 100 workers, on 2502 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -730,6 +730,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/intop1-eth04.tst">intop1-eth04.tst</a></td><td>success</td><td>interop1: spantree root</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop1-eth05.tst">intop1-eth05.tst</a></td><td>success</td><td>interop1: point2point ethernet encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop1-eth06.tst">intop1-eth06.tst</a></td><td>success</td><td>interop1: lacp</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/intop1-eth07.tst">intop1-eth07.tst</a></td><td>success</td><td>interop1: fragmentation and reassembly</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop1-ike101.tst">intop1-ike101.tst</a></td><td>success</td><td>interop1: ike1 with ipv4</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop1-ike102.tst">intop1-ike102.tst</a></td><td>success</td><td>interop1: ike1 with ipv6</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop1-ike103.tst">intop1-ike103.tst</a></td><td>success</td><td>interop1: ike1 with 3des</td></tr>
@@ -850,6 +851,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/intop2-eth03.tst">intop2-eth03.tst</a></td><td>success</td><td>interop2: dot1ad encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop2-eth04.tst">intop2-eth04.tst</a></td><td>success</td><td>interop2: point2point ethernet encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop2-eth05.tst">intop2-eth05.tst</a></td><td>success</td><td>interop2: lacp</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/intop2-eth06.tst">intop2-eth06.tst</a></td><td>success</td><td>interop2: fragmentation and reassembly</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop2-isis01.tst">intop2-isis01.tst</a></td><td>success</td><td>interop2: point2point isis</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop2-isis02.tst">intop2-isis02.tst</a></td><td>success</td><td>interop2: isis dis</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop2-isis03.tst">intop2-isis03.tst</a></td><td>success</td><td>interop2: isis nondis</td></tr>
@@ -912,6 +914,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/intop8-bgp13.tst">intop8-bgp13.tst</a></td><td>success</td><td>interop8: bgp large community</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop8-bgp14.tst">intop8-bgp14.tst</a></td><td>success</td><td>interop8: bgp with php labels</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop8-eigrp01.tst">intop8-eigrp01.tst</a></td><td>success</td><td>interop8: eigrp</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/intop8-eth01.tst">intop8-eth01.tst</a></td><td>success</td><td>interop8: fragmentation and reassembly</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop8-isis01.tst">intop8-isis01.tst</a></td><td>success</td><td>interop8: point2point isis</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop8-isis02.tst">intop8-isis02.tst</a></td><td>success</td><td>interop8: isis dis</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop8-isis03.tst">intop8-isis03.tst</a></td><td>success</td><td>interop8: isis nondis</td></tr>
@@ -955,6 +958,7 @@ jvm: ./rtr.bin<br/>
 <tr><td><a href="http://sources.nop.hu/cfg/intop9-bgp18.tst">intop9-bgp18.tst</a></td><td>success</td><td>interop9: bgp with php labels</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop9-eth01.tst">intop9-eth01.tst</a></td><td>success</td><td>interop9: ethernet encapsulation</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop9-eth02.tst">intop9-eth02.tst</a></td><td>success</td><td>interop9: dot1q encapsulation</td></tr>
+<tr><td><a href="http://sources.nop.hu/cfg/intop9-eth03.tst">intop9-eth03.tst</a></td><td>success</td><td>interop9: fragmentation and reassembly</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop9-isis01.tst">intop9-isis01.tst</a></td><td>success</td><td>interop9: point2point isis</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop9-isis02.tst">intop9-isis02.tst</a></td><td>success</td><td>interop9: isis dis</td></tr>
 <tr><td><a href="http://sources.nop.hu/cfg/intop9-isis03.tst">intop9-isis03.tst</a></td><td>success</td><td>interop9: isis nondis</td></tr>
